--- a/style.css
+++ b/style.css
@@ -8,6 +8,194 @@
 
 html, body { 
     height: 100%;
-    font: 'Manrope';
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    
+    background-color: hsl(224, 65%, 95%);
+    font-family: 'Manrope', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
+/*Background content*/
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 100px;    
+}
+
+.content img {
+    z-index: 1;
+}
+
+.title{
+    font-size: 20px;
+    font-weight: 800;
+    color: hsl(227, 35%, 25%);
+    
+    position: absolute;
+    z-index: 10;
+    margin-top: -50px;
+}
+
+.content-text {
+    position: absolute;
+    margin-top: 40px;
+    z-index: 10;
+    color: hsl(225, 20%, 60%);
+}
+
+/*Main content*/
+
+.main{
+    background-color: hsl(230, 100%, 99%);
+    /*BACK HERE AND DO THE MARGIN*/
+
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px hsla(228, 100%, 99%, 0.747);
+
+    margin-top: 30px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.main span {
+    color: hsl(225, 20%, 60%);
+    font-weight: 600;
+    margin-top: 30px;
+    font-family: 'Manrope', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.main-slideContainer {
+    margin-top: 10px;
+}
+
+/*The slider itself*/
+.slider {
+    -webkit-appearance: none; /*Hide default background/appearance*/
+    appearance: none;
+    height: 10px;
+    background: hsl(224, 65%, 95%);
+    outline: none;
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /*0.2 sec transition on hover*/
+    transition: opacity .2s;
+    border-radius: 5px;
+    
+    margin-top: 20px;
+    width: 40vh;
+}
+
+.slider:hover{
+    opacity: 1; /*Fully opacity on hover*/
+}
+
+.slider::-webkit-slider-thumb { /*The slider/Ball */
+    -webkit-appearance: none; /*just to confirm*/
+    appearance: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url(./images/icon-slider.svg);
+    cursor: pointer;
+    background-color: hsl(174, 86%, 45%);
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 5px 5px 10px hsla(174, 86%, 45%, 0.664);
+}
+
+.slider::-moz-range-thumb {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url(./images/icon-slider.svg);
+    cursor: pointer;
+}
+
+/*A TERMINAR COLOR DO RANGE*/
+/*Price*/
+.main-priceSelected {
+    margin-top: 20px;
+    color:  hsl(225, 20%, 60%);
+    font-family: 'Manrope';
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-priceFeatured {
+    color: hsl(227, 35%, 25%);
+    font-weight: 800;
+    font-size: 30px;
+    margin: 0px 10px;
+}
+
+.main-discount {
+    color:  hsl(225, 20%, 60%);
+    margin-top: 20px;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.main-discount span {
+    margin-top: 0;
+    margin: 0 1px;
+}
+
+/*Toggle Switch*/
+.toggle{
+    margin: 0 10px;
+}
+
+input[type=checkbox]{ /*Hide default HTML checkbox*/
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+.toggle label {
+    cursor: pointer; /*When mouse is above the toggle*/
+    text-indent: -9999px;
+    width: 52px;
+    height: 27px;
+    background: grey;
+    border-radius: 100px;
+    position: relative;
+    float: right; /*to make the text 'toggle' disappear*/
+}
+/*Construct of the toggle (circle)*/
+.toggle label::after { /*The ::after selector inserts something after the content of each selected element(s).*/
+    content: ''; /*content inserted (empty)*/
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.3s; /*smooth effect when change happens*/
+}
+
+.toggle input:checked + label { /*When the invisible chekbox is checked, change the label background too*/
+    background-color: hsl(174, 86%, 45%);
+}
+
+input:checked + label::after { /*When invisible checkbox is marked AND label is on "after" position (content = '')*/
+    left: calc(100% - 5px);/* an absolutely box, margin of the left, calculate 5px of the 100% of the space*/
+    transform: translateX(-100%); /*reposition an element in the horizontal and / or vertical direction.*/
+}
+
+label:active:after{ /*Just giving an effect of transition*/
+    width: 45px; 
+}
