--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
     margin-top: 40px;
     z-index: 10;
     color: hsl(225, 20%, 60%);
+    text-align: center;
 }
 
 /*Main content*/
@@ -228,6 +229,11 @@ label:active:after{ /*Just giving an effect of transition*/
 
 }
 
+.main-advantages_text {
+    display: flex;
+    flex-direction: column;
+}
+
 .main-advantages span {
     padding: 5px 0;
     margin-top: 0px;
@@ -268,4 +274,48 @@ button:hover {
     text-decoration: none;
     color: hsl(227, 35%, 25%) !important;
     font-weight: 700;
+}
+
+/* DESKTOP VERSION */
+@media (min-width: 1366px){ /*1440*/
+    .content-text{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .main-priceSelected {
+        float: right;
+    }
+
+    .content{
+        margin-top: 50px;
+    }
+
+    .main {
+        width: 80vh;
+        align-self: center;
+    }
+
+    .main-priceSelected {
+        font-size: 24px;
+    }
+
+    .main-priceFeatured {
+        font-size: 40px;
+    }
+
+    .main-advantages {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        padding: 0px 40px;
+    }
+}
+
+@media (min-width: 1366px){ /*TO FIX! I have to invert position of the div of input and priceFeatured*/
+    .main-slideContainer span{ /*TO FIX, I CAN'T CHANGE POSITION OF THE HTML NOW*/
+        /* TODO */
+    }
 }
